--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
+    "fuse.js": "^6.4.6",
     "js-cookie": "^2.2.1",
     "jsencrypt": "^3.1.0",
+    "nprogress": "^0.2.0",
+    "screenfull": "^5.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -43,7 +46,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+        "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
